--- a/style.css
+++ b/style.css
@@ -7,10 +7,21 @@
 }
 
 html,body{
-    height: 1005px;
+    height: 100px;
     width: 100%;
 }
 
+#crsr{
+    height: 2.3vw;
+    width: 2.3vw;
+    /* background-color: white; */
+    border: 1.4px solid #ffffffbe;
+    border-radius: 50%;
+    position: fixed;
+    z-index: 999;
+    mix-blend-mode: difference;
+    transform: translate(-50%,-50%);
+}
 #loader {
     height: 100%;
     width: 100%;
@@ -106,3 +117,63 @@ html,body{
 background-color: #151515;
 }
 
+#page1 #nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2.3vw 5.5vw;
+}
+
+#nav-part2{
+    display: flex;
+    align-items: center;
+    gap: 3vw;
+    justify-content: center;
+
+    
+}
+
+#nav-part2 h4{
+    font-size: 0.9vw;
+    font-weight: 500;
+}
+
+
+.hero{
+    width: 72%;
+    margin-left: 27%;
+    /* background-color: red; */
+    height: fit-content;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 999;
+}
+
+.hero:nth-child(2){
+    margin-top: 18vh;
+}
+
+.hero h1{
+    font-size: 7.2vw;
+    font-weight: 600;
+    text-transform: uppercase;
+    line-height: 7.2vw;
+
+}
+
+
+.hero h2 ,.hero h3 {
+    font-size: 7.2vw;
+    font-weight: 600;
+    text-transform: uppercase;
+    line-height: 7.2vw;
+
+}
+
+.hero h2:hover{
+    -webkit-text-stroke: 2px #ffff;
+    color: transparent;
+    font-weight: 500;
+}
